# MDS

./: LICENSE  README.md
solver/: CMakeLists.txt  main.cpp
